--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
+<h1>Supermodelos</h1>      
+    <p>Nesse site espero apresentar a vocês as mais diversas curiosidades sobre supermodelos e as marcas de luxo para as quais elas desfilam.</p>  
+Nesse site quero deixar claro a diferença entre ‘catwalk’,‘walk’ e também fazer comentários sobre os desfiles, espero mostrar sobre as tendências da vogue e falar também sobre a alta costura.  
+ No site também falarei sobre as super modelos mais famosas como: Naomi Campbell, Gisele Bundchen, Kendall Jenner, Bella Hadid e também sobre assuntos polêmicos como a representatividade nas passarelas. Espero que o site seja útil de alguma forma, para os fãs da moda e tendência.
 
