--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+
+
+
+
+
+
 <h1>Supermodelos</h1>      
  <p>Nesse site espero apresentar a vocês as mais diversas <stong>curiosidades sobre supermodelos e as marcas de luxo para as quais elas desfilam.</stong></p>  
  <p>Nesse site quero deixar claro a diferença entre ‘catwalk’,‘walk’ e também fazer comentários sobre os desfiles, espero mostrar sobre as tendências da vogue e falar também sobre a alta costura.</p>  
